--- a/angular.json
+++ b/angular.json
@@ -61,6 +61,15 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "sourceMap": false,
+              "extractLicenses": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -122,5 +131,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "780f350b-549f-49f4-8103-630a2f05d011"
   }
 }
