--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
+.gitignore
 
 # Compiled output
 /dist
@@ -41,3 +42,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
