--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
@@ -25,6 +26,8 @@
     "chart.js": "^4.5.0",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^4.1.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.15",
     "recharts": "^3.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
